--- a/.github/workflows/main_ns-webapp0011.yml
+++ b/.github/workflows/main_ns-webapp0011.yml
@@ -21,7 +21,7 @@ jobs:
         with:
           node-version: '18.x'
 
-      - name: npm install, build, and test
+      - name: graphql-http install, build, and test
         run: |
           npm install
           npm run build --if-present
